<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo1">DEMO 1 - SIMPLE DIALOG</string>
    <string name="d2">DEMO 2 - BUTTONS DIALOG</string>
    <string name="enter">Enter Some Text</string>
    <string name="d3">DEMO 3 TEXT INPUT DIALOG</string>
    <string name="enterNum1">Enter Number 1:</string>
    <string name="enterNum2">Enter Number 2:</string>
    <string name="ex3">EXCERCISE 3</string>
    <string name="d4">DEMO 4 DATEPICKER DIALOG</string>
    <string name="d5">DEMO 5 TIMEPICKER DIALOG</string>
</resources>